--- a/project/src/main/java/Project/App.fxml
+++ b/project/src/main/java/Project/App.fxml
@@ -1,8 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
 
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="654.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <left>
+      <AnchorPane prefHeight="551.0" prefWidth="258.0" BorderPane.alignment="CENTER">
+         <children>
+            <TextField layoutX="14.0" layoutY="213.0" promptText="Studentnummer" />
+            <Button layoutX="185.0" layoutY="213.0" mnemonicParsing="false" text="Søk" />
+            <TextField layoutX="14.0" layoutY="56.0" prefHeight="27.0" prefWidth="107.0" promptText="Fornavn" />
+            <TextField layoutX="124.0" layoutY="56.0" prefHeight="27.0" prefWidth="122.0" promptText="Etternavn" />
+            <TextField layoutX="14.0" layoutY="90.0" prefHeight="27.0" prefWidth="154.0" promptText="Studentnummer" />
+            <Button layoutX="175.0" layoutY="90.0" mnemonicParsing="false" text="Registrer!" />
+            <Label layoutX="18.0" layoutY="31.0" text="Registrer deg her:" />
+            <Label layoutX="18.0" layoutY="188.0" text="Hent inn dine karakterer:" />
+            <Label layoutX="18.0" layoutY="291.0" text="Legg til karakterer:" />
+            <TextField layoutX="18.0" layoutY="315.0" promptText="Navn på fag" />
+            <Button layoutX="122.0" layoutY="425.0" mnemonicParsing="false" text="Legg til" />
+            <ChoiceBox layoutX="19.0" layoutY="389.0" prefHeight="27.0" prefWidth="160.0" />
+            <TextField layoutX="19.0" layoutY="425.0" prefHeight="27.0" prefWidth="96.0" promptText="År" />
+            <ChoiceBox layoutX="19.0" layoutY="354.0" prefHeight="27.0" prefWidth="159.0" />
+         </children>
+      </AnchorPane>
+   </left>
+   <top>
+      <AnchorPane prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label layoutX="200.0" layoutY="30.0" text="Velkommen til karakterboken">
+               <font>
+                  <Font size="45.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+   </top>
+   <center>
+      <AnchorPane accessibleText="Karakter" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label layoutX="42.0" layoutY="43.0" text="Her kommer studentnavn når innlogget">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TableView layoutX="42.0" layoutY="111.0" prefHeight="100.0" prefWidth="153.0">
+              <columns>
+                <TableColumn prefWidth="75.0" text="Fag" />
+                <TableColumn prefWidth="75.0" text="Karakter" />
+              </columns>
+            </TableView>
+         </children>
+      </AnchorPane>
+   </center>
+</BorderPane>
