--- a/project/src/main/java/Project/App.fxml
+++ b/project/src/main/java/Project/App.fxml
@@ -1,41 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="654.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="654.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Project.Controller">
    <left>
-      <AnchorPane prefHeight="551.0" prefWidth="258.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="551.0" prefWidth="258.0" style="-fx-background-color: #828E84#828E84;" BorderPane.alignment="CENTER">
          <children>
-            <TextField layoutX="14.0" layoutY="213.0" promptText="Studentnummer" />
-            <Button layoutX="185.0" layoutY="213.0" mnemonicParsing="false" text="Søk" />
-            <TextField layoutX="14.0" layoutY="56.0" prefHeight="27.0" prefWidth="107.0" promptText="Fornavn" />
-            <TextField layoutX="124.0" layoutY="56.0" prefHeight="27.0" prefWidth="122.0" promptText="Etternavn" />
-            <TextField layoutX="14.0" layoutY="90.0" prefHeight="27.0" prefWidth="154.0" promptText="Studentnummer" />
-            <Button layoutX="175.0" layoutY="90.0" mnemonicParsing="false" text="Registrer!" />
-            <Label layoutX="18.0" layoutY="31.0" text="Registrer deg her:" />
-            <Label layoutX="18.0" layoutY="188.0" text="Hent inn dine karakterer:" />
-            <Label layoutX="18.0" layoutY="291.0" text="Legg til karakterer:" />
-            <TextField layoutX="18.0" layoutY="315.0" promptText="Navn på fag" />
-            <Button layoutX="122.0" layoutY="425.0" mnemonicParsing="false" text="Legg til" />
-            <ChoiceBox layoutX="19.0" layoutY="389.0" prefHeight="27.0" prefWidth="160.0" />
-            <TextField layoutX="19.0" layoutY="425.0" prefHeight="27.0" prefWidth="96.0" promptText="År" />
-            <ChoiceBox layoutX="19.0" layoutY="354.0" prefHeight="27.0" prefWidth="159.0" />
+            <TextField fx:id="searchStudentID" layoutX="20.0" layoutY="213.0" promptText="Studentnummer" />
+            <Button fx:id="searchStudentButton" layoutX="185.0" layoutY="213.0" mnemonicParsing="false" text="Søk" />
+            <TextField fx:id="firstName" layoutX="20.0" layoutY="56.0" prefHeight="27.0" prefWidth="107.0" promptText="Fornavn" />
+            <TextField fx:id="lastName" layoutX="124.0" layoutY="56.0" prefHeight="27.0" prefWidth="122.0" promptText="Etternavn" />
+            <TextField fx:id="registerStudentID" layoutX="20.0" layoutY="90.0" prefHeight="27.0" prefWidth="154.0" promptText="Studentnummer" />
+            <Button fx:id="registerStudentButton" layoutX="175.0" layoutY="90.0" mnemonicParsing="false" text="Registrer!" />
+            <Label layoutX="20.0" layoutY="31.0" text="Registrer deg her:" />
+            <Label layoutX="20.0" layoutY="188.0" text="Hent inn dine karakterer:" />
+            <Label layoutX="20.0" layoutY="277.0" text="Legg til karakterer:" />
+            <TextField fx:id="registerCourseID" layoutX="20.0" layoutY="296.0" prefHeight="27.0" prefWidth="156.0" promptText="Navn på emne" />
+            <Button fx:id="registerCourseButton" layoutX="118.0" layoutY="425.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="58.0" text="Legg til" />
+            <TextField fx:id="courseYear" layoutX="20.0" layoutY="425.0" prefHeight="27.0" prefWidth="96.0" promptText="År" />
+            <ToggleButton fx:id="semesterAutumn" layoutX="20.0" layoutY="390.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="72.0" text="Høst" />
+            <ToggleButton fx:id="semesterSpring" layoutX="94.0" layoutY="390.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="80.0" text="Vår" />
+            <ToggleButton fx:id="gradeA" layoutX="20.0" layoutY="352.0" mnemonicParsing="false" text="A" />
+            <ToggleButton fx:id="gradeB" layoutX="51.0" layoutY="352.0" mnemonicParsing="false" text="B" />
+            <ToggleButton fx:id="gradeC" layoutX="82.0" layoutY="352.0" mnemonicParsing="false" text="C" />
+            <ToggleButton fx:id="gradeD" layoutX="113.0" layoutY="352.0" mnemonicParsing="false" text="D" />
+            <ToggleButton fx:id="gradeE" layoutX="144.0" layoutY="352.0" mnemonicParsing="false" text="E" />
+            <Label layoutX="21.0" layoutY="329.0" text="Resultat:" />
+            <Label fx:id="errorRegisterCourse" layoutX="20.0" layoutY="468.0" text="Feilmelding her" textFill="#dd2626">
+               <font>
+                  <Font name="System Font" size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="errorRegisterStudent" layoutX="20.0" layoutY="129.0" text="Error" textFill="#dd2626" />
+            <Label fx:id="errorSearchStudent" layoutX="20.0" layoutY="246.0" text="Label" textFill="#dd2626" />
          </children>
       </AnchorPane>
    </left>
    <top>
-      <AnchorPane prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #828E84#828E84;" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="200.0" layoutY="30.0" text="Velkommen til karakterboken">
+            <Label layoutX="200.0" layoutY="30.0" text="Velkommen til karakterboken" textFill="#fcf1bd">
                <font>
                   <Font size="45.0" />
                </font>
@@ -44,17 +56,19 @@
       </AnchorPane>
    </top>
    <center>
-      <AnchorPane accessibleText="Karakter" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <AnchorPane accessibleText="Karakter" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #B2BEB5#B2BEB5;" BorderPane.alignment="CENTER">
          <children>
             <Label layoutX="42.0" layoutY="43.0" text="Her kommer studentnavn når innlogget">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <TableView layoutX="42.0" layoutY="111.0" prefHeight="100.0" prefWidth="153.0">
+            <TableView layoutX="42.0" layoutY="111.0" prefHeight="100.0" prefWidth="301.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="Fag" />
+                <TableColumn prefWidth="75.0" text="Emne" />
                 <TableColumn prefWidth="75.0" text="Karakter" />
+                  <TableColumn prefWidth="75.0" text="Semester" />
+                  <TableColumn prefWidth="75.0" text="År" />
               </columns>
             </TableView>
          </children>
