--- a/project/src/main/java/Project/App.fxml
+++ b/project/src/main/java/Project/App.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleButton?>
@@ -63,14 +62,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TableView layoutX="42.0" layoutY="111.0" prefHeight="100.0" prefWidth="301.0">
-              <columns>
-                <TableColumn prefWidth="75.0" text="Emne" />
-                <TableColumn prefWidth="75.0" text="Karakter" />
-                  <TableColumn prefWidth="75.0" text="Semester" />
-                  <TableColumn prefWidth="75.0" text="År" />
-              </columns>
-            </TableView>
+            <TableView fx:id="courseTable" layoutX="42.0" layoutY="111.0" prefHeight="100.0" prefWidth="301.0" />
          </children>
       </AnchorPane>
    </center>
