--- a/project/src/main/java/Project/App.fxml
+++ b/project/src/main/java/Project/App.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
@@ -17,7 +18,7 @@
             <Button fx:id="searchStudentButton" layoutX="185.0" layoutY="213.0" mnemonicParsing="false" text="Søk" />
             <TextField fx:id="firstName" layoutX="20.0" layoutY="56.0" prefHeight="27.0" prefWidth="100.0" promptText="Fornavn" />
             <TextField fx:id="lastName" layoutX="124.0" layoutY="56.0" prefHeight="27.0" prefWidth="100.0" promptText="Etternavn" />
-            <TextField fx:id="registerStudentID" layoutX="20.0" layoutY="90.0" prefHeight="27.0" prefWidth="154.0" promptText="Studentnummer" />
+            <TextField fx:id="studentID" layoutX="20.0" layoutY="90.0" prefHeight="27.0" prefWidth="154.0" promptText="Studentnummer" />
             <Button fx:id="registerStudentButton" layoutX="175.0" layoutY="90.0" mnemonicParsing="false" text="Registrer!" />
             <Label layoutX="20.0" layoutY="31.0" text="Registrer deg her:" />
             <Label layoutX="20.0" layoutY="188.0" text="Hent inn din side:" />
@@ -25,21 +26,29 @@
             <TextField fx:id="registerCourseID" layoutX="20.0" layoutY="296.0" prefHeight="27.0" prefWidth="156.0" promptText="Navn på emne" />
             <Button fx:id="registerCourseButton" layoutX="118.0" layoutY="425.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="58.0" text="Legg til" />
             <TextField fx:id="courseYear" layoutX="20.0" layoutY="425.0" prefHeight="27.0" prefWidth="96.0" promptText="År" />
-            <ToggleButton fx:id="semesterAutumn" layoutX="20.0" layoutY="390.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="72.0" text="Høst" />
-            <ToggleButton fx:id="semesterSpring" layoutX="94.0" layoutY="390.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="80.0" text="Vår" />
-            <ToggleButton fx:id="gradeA" layoutX="20.0" layoutY="352.0" mnemonicParsing="false" text="A" />
-            <ToggleButton fx:id="gradeB" layoutX="51.0" layoutY="352.0" mnemonicParsing="false" text="B" />
-            <ToggleButton fx:id="gradeC" layoutX="82.0" layoutY="352.0" mnemonicParsing="false" text="C" />
-            <ToggleButton fx:id="gradeD" layoutX="113.0" layoutY="352.0" mnemonicParsing="false" text="D" />
-            <ToggleButton fx:id="gradeE" layoutX="144.0" layoutY="352.0" mnemonicParsing="false" text="E" />
+            
+            <ToggleButton fx:id="semesterAutumn" layoutX="20.0" layoutY="390.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="72.0" text="Høst">
+               <toggleGroup>
+                  <ToggleGroup fx:id="semesterToggle" />
+               </toggleGroup></ToggleButton>
+            <ToggleButton fx:id="semesterSpring" layoutX="94.0" layoutY="390.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="80.0" text="Vår" toggleGroup="$semesterToggle" />
+           
+            <ToggleButton fx:id="gradeA" layoutX="20.0" layoutY="352.0" mnemonicParsing="false" text="A">
+               <toggleGroup>
+                  <ToggleGroup fx:id="gradeToggle" />
+               </toggleGroup></ToggleButton>
+            <ToggleButton fx:id="gradeB" layoutX="51.0" layoutY="352.0" mnemonicParsing="false" text="B" toggleGroup="$gradeToggle" />
+            <ToggleButton fx:id="gradeC" layoutX="82.0" layoutY="352.0" mnemonicParsing="false" text="C" toggleGroup="$gradeToggle" />
+            <ToggleButton fx:id="gradeD" layoutX="113.0" layoutY="352.0" mnemonicParsing="false" text="D" toggleGroup="$gradeToggle" />
+            <ToggleButton fx:id="gradeE" layoutX="144.0" layoutY="352.0" mnemonicParsing="false" text="E" toggleGroup="$gradeToggle" />
             <Label layoutX="21.0" layoutY="329.0" text="Resultat:" />
-            <Label fx:id="errorRegisterCourse" layoutX="20.0" layoutY="468.0" text="Feilmelding her" textFill="#dd2626">
+            <Label fx:id="errorRegisterCourse" layoutX="20.0" layoutY="468.0" text="." textFill="#dd2626">
                <font>
                   <Font name="System Font" size="13.0" />
                </font>
             </Label>
-            <Label fx:id="errorRegisterStudent" layoutX="20.0" layoutY="129.0" text="Error" textFill="#dd2626" />
-            <Label fx:id="errorSearchStudent" layoutX="20.0" layoutY="246.0" text="Label" textFill="#dd2626" />
+            <Label fx:id="errorRegisterStudent" layoutX="20.0" layoutY="129.0" text="." textFill="#dd2626" />
+            <Label fx:id="errorSearchStudent" layoutX="20.0" layoutY="246.0" text="." textFill="#dd2626" />
          </children>
       </AnchorPane>
    </left>
