--- a/project/src/main/java/Project/App.fxml
+++ b/project/src/main/java/Project/App.fxml
@@ -14,14 +14,14 @@
    <left>
       <AnchorPane prefHeight="551.0" prefWidth="258.0" style="-fx-background-color: #828E84#828E84;" BorderPane.alignment="CENTER">
          <children>
-            <TextField fx:id="searchStudentID" layoutX="20.0" layoutY="213.0" promptText="Studentnummer" />
-            <Button fx:id="searchStudentButton" layoutX="185.0" layoutY="213.0" mnemonicParsing="false" text="Søk" />
+            <TextField fx:id="searchStudentID" layoutX="20.0" layoutY="192.0" promptText="Studentnummer" />
+            <Button fx:id="searchStudentButton" layoutX="191.0" layoutY="192.0" mnemonicParsing="false" text="Søk" />
             <TextField fx:id="firstName" layoutX="20.0" layoutY="56.0" prefHeight="27.0" prefWidth="100.0" promptText="Fornavn" />
             <TextField fx:id="lastName" layoutX="124.0" layoutY="56.0" prefHeight="27.0" prefWidth="100.0" promptText="Etternavn" />
             <TextField fx:id="studentID" layoutX="20.0" layoutY="90.0" prefHeight="27.0" prefWidth="154.0" promptText="Studentnummer" />
             <Button fx:id="registerStudentButton" layoutX="175.0" layoutY="90.0" mnemonicParsing="false" text="Registrer!" />
             <Label layoutX="20.0" layoutY="31.0" text="Registrer deg her:" />
-            <Label layoutX="20.0" layoutY="188.0" text="Hent inn din side:" />
+            <Label layoutX="20.0" layoutY="169.0" text="Hent inn din side:" />
             <Label layoutX="20.0" layoutY="277.0" text="Legg til karakterer:" />
             <TextField fx:id="registerCourseID" layoutX="20.0" layoutY="296.0" prefHeight="27.0" prefWidth="156.0" promptText="Navn på emne" />
             <Button fx:id="registerCourseButton" layoutX="118.0" layoutY="425.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="58.0" text="Legg til" />
@@ -41,14 +41,20 @@
             <ToggleButton fx:id="gradeC" layoutX="82.0" layoutY="352.0" mnemonicParsing="false" text="C" toggleGroup="$gradeToggle" />
             <ToggleButton fx:id="gradeD" layoutX="113.0" layoutY="352.0" mnemonicParsing="false" text="D" toggleGroup="$gradeToggle" />
             <ToggleButton fx:id="gradeE" layoutX="144.0" layoutY="352.0" mnemonicParsing="false" text="E" toggleGroup="$gradeToggle" />
-            <Label layoutX="21.0" layoutY="329.0" text="Resultat:" />
-            <Label fx:id="errorRegisterCourse" layoutX="20.0" layoutY="468.0" text="." textFill="#dd2626">
+            <Label layoutX="20.0" layoutY="329.0" text="Resultat:" />
+            <Label fx:id="errorRegisterCourse" layoutX="20.0" layoutY="468.0" text="." textFill="#ff5050">
                <font>
-                  <Font name="System Font" size="13.0" />
+                  <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Label fx:id="errorRegisterStudent" layoutX="20.0" layoutY="129.0" text="." textFill="#dd2626" />
-            <Label fx:id="errorSearchStudent" layoutX="20.0" layoutY="246.0" text="." textFill="#dd2626" />
+            <Label fx:id="errorRegisterStudent" layoutX="20.0" layoutY="129.0" text="." textFill="#ff5050">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font></Label>
+            <Label fx:id="errorSearchStudent" layoutX="20.0" layoutY="226.0" text="." textFill="#ff5050">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font></Label>
          </children>
       </AnchorPane>
    </left>
@@ -76,6 +82,9 @@
             <Label text="Logg inn med din studentID eller registrer deg" />
             </placeholder>
             </TableView>
+            <Button fx:id="averageButton" layoutX="42.0" layoutY="331.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="100.0" text="Karaktersnitt" />
+            <Label fx:id="averageLabel" layoutX="42.0" layoutY="369.0" text="Her kommer gjennomsnitt" />
+            <Label fx:id="loggedInStudentID" layoutX="42.0" layoutY="73.0" />
          </children>
       </AnchorPane>
    </center>
