--- a/project/src/main/java/Project/App.fxml
+++ b/project/src/main/java/Project/App.fxml
@@ -82,10 +82,10 @@
             <Label text="Logg inn med din studentID eller registrer deg" />
             </placeholder>
             </TableView>
-            <Button fx:id="averageButton" layoutX="42.0" layoutY="331.0" mnemonicParsing="false" onAction="#average" prefHeight="27.0" prefWidth="110.0" text="Karaktersnitt" />
+            <Button layoutX="42.0" layoutY="331.0" mnemonicParsing="false" onAction="#average" prefHeight="27.0" prefWidth="110.0" text="Karaktersnitt" />
             <Label fx:id="averageLabel" layoutX="42.0" layoutY="369.0" />
             <Label fx:id="loggedInStudentID" layoutX="42.0" layoutY="73.0" />
-            <Button fx:id="medianButton" layoutX="160.0" layoutY="331.0" mnemonicParsing="false" onAction="#median" prefHeight="27.0" prefWidth="145.0" text="Median karakterpoeng" />
+            <Button layoutX="160.0" layoutY="331.0" mnemonicParsing="false" onAction="#median" prefHeight="27.0" prefWidth="145.0" text="Median karakterpoeng" />
             <Label fx:id="medianLabel" layoutX="156.0" layoutY="369.0" />
             <Label fx:id="errorCalc" layoutX="42.0" layoutY="409.0" />
          </children>
